--- a/.gitattributes
+++ b/.gitattributes
@@ -42,7 +42,7 @@ _book/*.pdf
 *.sh linguist-vendored
 *.css linguist-vendored
 
-
+*.Rmd linguist-language=R
 *.stan linguist-language=Stan
 *.inp linguist-language=Mplus
 *.out linguist-generated=true
